--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,37 @@
 </head>
 
 <body>
-  <main class="container mx-auto mt-28 px-5 flex">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+  <header class="bg-gray-800 text-white shadow-md">
+    <nav class="container mx-auto px-5 py-3 flex justify-between items-center">
+      <div class="font-bold text-xl">
+        <%= link_to "Multipost", root_path, class: "hover:text-gray-300" %>
+      </div>
+      <div class="space-x-4">
+        <% if user_signed_in? %>
+        <span class="text-gray-300">Welcome, <%= current_user.email %></span>
+        <%= link_to "Edit Profile", edit_user_registration_path, class: "hover:text-gray-300" %>
+        <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "bg-red-600 hover:bg-red-700 px-3 py-1 rounded inline-block" %>
+        <% else %>
+        <%= link_to "Sign In", new_user_session_path, class: "hover:text-gray-300" %>
+        <%= link_to "Sign Up", new_user_registration_path, class: "bg-blue-600 hover:bg-blue-700 px-3 py-1 rounded inline-block" %>
+        <% end %>
+      </div>
+    </nav>
+  </header>
+
+  <% if notice %>
+  <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mt-4 mx-auto max-w-7xl" role="alert">
+    <span class="block sm:inline"><%= notice %></span>
+  </div>
+  <% end %>
+
+  <% if alert %>
+  <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-4 mx-auto max-w-7xl" role="alert">
+    <span class="block sm:inline"><%= alert %></span>
+  </div>
+  <% end %>
+
+  <main class="container mx-auto mt-8 px-5">
     <%= yield %>
   </main>
 </body>
