--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,7 +33,7 @@
       .bg-green-100.border.border-green-400.text-green-700.px-4.py-3.rounded.relative.mt-4.mx-auto.max-w-7xl{:role => "alert"}
         %span.block.sm:inline= notice
     - if alert
-      .bg-red-100.border.border-red-400.text-red-700.px-4.py-3.rounded.relative.mt-4.mx-auto.max-w-7xl{:role => "alert"}
+      .bg-red-100.border.border-red-400.text-red-700.px-4.py-3.rounded.relative.mt-4.mx-auto.max-w-7xl{ role: "alert" }
         %span.block.sm:inline= alert
     %main.container.mx-auto.mt-8.px-5
       = yield
