--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -14,7 +14,7 @@
           %a.bg-blue-100.p-3.rounded.hover:bg-blue-200.transition-colors{:href => "#"} My Dashboard
           %a.bg-blue-100.p-3.rounded.hover:bg-blue-200.transition-colors{:href => "#"} Create Post
           %a.bg-blue-100.p-3.rounded.hover:bg-blue-200.transition-colors{:href => "#"} Analytics
-          %a.bg-blue-100.p-3.rounded.hover:bg-blue-200.transition-colors{:href => "#"} Account Settings
+          %a.bg-blue-100.p-3.rounded.hover:bg-blue-200.transition-colors{ href: "#" } Account Settings
   - else
     .bg-white.p-8.rounded-lg.shadow-md
       %h2.text-2xl.font-semibold.mb-4 Get Started Today
