--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,4 +1,4 @@
-.my-5.space-y-5{:id => "#{dom_id post}"}
+.my-5.space-y-5{ id: "#{dom_id post}" }
   %div
     %strong.block.font-medium.mb-1 Text:
     = post.text
