--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,5 +1,5 @@
 - content_for :title, "Showing post"
-.w-full{:class => "md:w-2/3"}
+.w-full{ class: "md:w-2/3" }
   - if notice.present?
     %p#notice.py-2.px-3.bg-green-50.mb-5.text-green-500.font-medium.rounded-md.inline-block= notice
   %h1.font-bold.text-4xl Showing post
