--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -11,9 +11,9 @@
       .bg-gray-100.p-4.rounded.mb-4
         %h3.font-semibold.mb-2 Quick Links
         .grid.grid-cols-2.gap-4
-          %a.bg-blue-100.p-3.rounded.hover:bg-blue-200.transition-colors{:href => "#"} My Dashboard
-          %a.bg-blue-100.p-3.rounded.hover:bg-blue-200.transition-colors{:href => "#"} Create Post
-          %a.bg-blue-100.p-3.rounded.hover:bg-blue-200.transition-colors{:href => "#"} Analytics
+          %a.bg-blue-100.p-3.rounded.hover:bg-blue-200.transition-colors{ href: "#" } My Dashboard
+          %a.bg-blue-100.p-3.rounded.hover:bg-blue-200.transition-colors{ href: "#" } Create Post
+          %a.bg-blue-100.p-3.rounded.hover:bg-blue-200.transition-colors{ href: "#" } Analytics
           %a.bg-blue-100.p-3.rounded.hover:bg-blue-200.transition-colors{ href: "#" } Account Settings
   - else
     .bg-white.p-8.rounded-lg.shadow-md
