--- a/app/assets/stylesheets/application.postcss.css
+++ b/app/assets/stylesheets/application.postcss.css
@@ -1,1 +1,8 @@
 /* Entry point for your PostCSS build */
+@import "tailwindcss/preflight";
+@import "tailwindcss/utilities";
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark, cupcake, corporate, synthwave;
+}
+
+/* Custom styles below this line */
