--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="light">
+<html data-theme="frappe" data-controller="theme">
 
 <head>
   <title>Multipost</title>
@@ -18,12 +18,28 @@
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/icon.png">
 
+  <%# Color scheme meta tag for browsers %>
+  <meta name="color-scheme" content="dark light">
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="<%= catppuccin_color(:base) %>">
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="<%= catppuccin_color(:base) %>">
+
   <%# Includes all stylesheet files in app/assets/stylesheets %>
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "application", defer: true %>
 </head>
 
 <body>
+  <div class="fixed top-4 right-4 z-50">
+    <div class="p-2 bg-base-200 rounded-lg shadow-lg">
+      <select data-theme-target="selector" data-action="change->theme#select" class="select select-sm select-bordered" aria-label="Select theme">
+        <option value="latte">Latte (Light)</option>
+        <option value="frappe">Frappe (Dark)</option>
+        <option value="macchiato">Macchiato (Darker)</option>
+        <option value="mocha">Mocha (Darkest)</option>
+      </select>
+    </div>
+  </div>
+
   <%= yield %>
 </body>
 
