--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="frappe" data-controller="theme synthwave">
+<html data-theme="dark" data-controller="theme synthwave">
 
 <head>
   <title>Multipost</title>
@@ -20,8 +20,6 @@
 
   <%# Color scheme meta tag for browsers %>
   <meta name="color-scheme" content="dark light">
-  <meta name="theme-color" media="(prefers-color-scheme: light)" content="<%= catppuccin_color(:base) %>">
-  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="<%= catppuccin_color(:base) %>">
 
   <%# Includes all stylesheet files in app/assets/stylesheets %>
   <%= stylesheet_link_tag "application" %>
@@ -32,10 +30,8 @@
   <div class="fixed top-4 right-4 z-50">
     <div class="p-2 bg-base-200 rounded-lg shadow-lg">
       <select data-theme-target="selector" data-action="change->theme#select" class="select select-sm select-bordered" aria-label="Select theme">
-        <option value="latte">Latte (Light)</option>
-        <option value="frappe">Frappe (Dark)</option>
-        <option value="macchiato">Macchiato (Darker)</option>
-        <option value="mocha">Mocha (Darkest)</option>
+        <option value="light">Light</option>
+        <option value="dark">Dark</option>
         <% if Rails.env.development? || Rails.env.test? %>
         <option value="synthwave84">Synthwave '84</option>
         <% end %>
